--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   </head>
   <body>
     <div class="container mt-4">
-      <h1 class="my-4">
+      <h1 class="blue-saxophone">
         Titre de niveau 1
       </h1>
+      <a href="#incre-dible"> 
+        Mon titre de niveau 3
+      </a>
       <div class="alert alert-warning my-4">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
       </div>
@@ -69,7 +72,7 @@
         </p>
       </blockquote>
 
-      <h3>Header Level 3</h3>
+      <h3 id="incre-dible">Header Level 3</h3>
 
       <ul>
          <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
